feature: stage/unstage hunk (#265)

--- a/src/Views/StashesPage.axaml
+++ b/src/Views/StashesPage.axaml
@@ -128,7 +128,7 @@
           <DataGridTemplateColumn Header="ICON">
             <DataGridTemplateColumn.CellTemplate>
               <DataTemplate>
-                <v:ChangeStatusIcon Width="14" Height="14" IsWorkingCopyChange="False" Change="{Binding}"/>
+                <v:ChangeStatusIcon Width="14" Height="14" Change="{Binding}"/>
               </DataTemplate>
             </DataGridTemplateColumn.CellTemplate>
           </DataGridTemplateColumn>
