--- a/src/Views/ChangeCollectionView.axaml
+++ b/src/Views/ChangeCollectionView.axaml
@@ -56,7 +56,7 @@
                             IsChecked="{Binding IsExpanded}"
                             IsVisible="{Binding IsFolder}"/>
 
-              <v:ChangeStatusIcon Grid.Column="1" Width="14" Height="14" IsWorkingCopyChange="{Binding #ThisControl.IsWorkingCopyChange}" Change="{Binding Change}" IsVisible="{Binding !IsFolder}"/>
+              <v:ChangeStatusIcon Grid.Column="1" Width="14" Height="14" IsUnstagedChange="{Binding #ThisControl.IsUnstagedChange}" Change="{Binding Change}" IsVisible="{Binding !IsFolder}"/>
               <TextBlock Grid.Column="2" Classes="monospace" Text="{Binding FullPath, Converter={x:Static c:PathConverters.PureFileName}}" Margin="6,0,0,0"/>
             </Grid>
           </DataTemplate>
@@ -75,7 +75,7 @@
               <v:ChangeStatusIcon Grid.Column="0"
                                   Width="14" Height="14"
                                   Margin="4,0,0,0"
-                                  IsWorkingCopyChange="{Binding #ThisControl.IsWorkingCopyChange}"
+                                  IsUnstagedChange="{Binding #ThisControl.IsUnstagedChange}"
                                   Change="{Binding}" />
 
               <TextBlock Grid.Column="1"
@@ -104,7 +104,7 @@
               <v:ChangeStatusIcon Grid.Column="0"
                                   Width="14" Height="14"
                                   Margin="4,0,0,0"
-                                  IsWorkingCopyChange="{Binding #ThisControl.IsWorkingCopyChange}"
+                                  IsUnstagedChange="{Binding #ThisControl.IsUnstagedChange}"
                                   Change="{Binding}" />
 
               <TextBlock Grid.Column="1"
