--- a/src/Views/RevisionCompare.axaml
+++ b/src/Views/RevisionCompare.axaml
@@ -103,8 +103,7 @@
 
         <!-- Changes -->
         <Border Grid.Row="1" Margin="0,4,0,0" BorderBrush="{DynamicResource Brush.Border2}" BorderThickness="1" Background="{DynamicResource Brush.Contents}">
-          <v:ChangeCollectionView IsWorkingCopyChange="False"
-                                  ViewMode="{Binding Source={x:Static vm:Preference.Instance}, Path=CommitChangeViewMode}"
+          <v:ChangeCollectionView ViewMode="{Binding Source={x:Static vm:Preference.Instance}, Path=CommitChangeViewMode}"
                                   Changes="{Binding VisibleChanges}"
                                   SelectedChanges="{Binding SelectedChanges, Mode=TwoWay}"
                                   ContextRequested="OnChangeContextRequested"/>
