--- a/src/Views/Merge.axaml
+++ b/src/Views/Merge.axaml
@@ -2,6 +2,7 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+             xmlns:m="using:SourceGit.Models"
              xmlns:vm="using:SourceGit.ViewModels"
              mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
              x:Class="SourceGit.Views.Merge"
@@ -36,10 +37,10 @@
       <ComboBox Grid.Row="2" Grid.Column="1"
                 Height="28" Padding="8,0"
                 VerticalAlignment="Center" HorizontalAlignment="Stretch"
-                ItemsSource="{Binding Modes}"
+                ItemsSource="{Binding Source={x:Static m:MergeMode.Supported}}"
                 SelectedItem="{Binding SelectedMode, Mode=TwoWay}">
         <ComboBox.ItemTemplate>
-          <DataTemplate DataType="vm:MergeMode">
+          <DataTemplate DataType="m:MergeMode">
             <StackPanel Orientation="Horizontal" Height="20" VerticalAlignment="Center">
               <TextBlock Text="{Binding Name}"/>
               <TextBlock Text="{Binding Desc}" Margin="8,0,0,0" FontSize="11" Foreground="{DynamicResource Brush.FG2}"/>
