--- a/src/Views/Reset.axaml
+++ b/src/Views/Reset.axaml
@@ -2,6 +2,7 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+             xmlns:m="using:SourceGit.Models"
              xmlns:vm="using:SourceGit.ViewModels"
              xmlns:c="using:SourceGit.Converters"
              mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
@@ -38,10 +39,10 @@
       <ComboBox Grid.Row="2" Grid.Column="1"
                 Height="28" Padding="8,0"
                 VerticalAlignment="Center" HorizontalAlignment="Stretch"
-                ItemsSource="{Binding Modes}"
+                ItemsSource="{Binding Source={x:Static m:ResetMode.Supported}}"
                 SelectedItem="{Binding SelectedMode, Mode=TwoWay}">
         <ComboBox.ItemTemplate>
-          <DataTemplate DataType="vm:ResetMode">
+          <DataTemplate DataType="m:ResetMode">
             <Grid ColumnDefinitions="16,60,*">
               <Ellipse Grid.Column="0" Width="12" Height="12" Fill="{Binding Color}"/>
               <TextBlock Grid.Column="1" Text="{Binding Name}" Margin="4,0,0,0"/>
